Fix alignment exodus menu since last patch
Cause cpt is lazier then me....

--- a/cExodus/ui/mods/cExodus/css/cExodus.css
+++ b/cExodus/ui/mods/cExodus/css/cExodus.css
@@ -49,7 +49,7 @@
 #cExodus {
 	position: absolute;
 	top: 60px;
-	right: 450px;
+	right: 587px;
 	
 	background-color: rgba(40, 40, 40, 0.8);
 	padding: 0;
